--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
+    "node-sass": "^3.4.2",
     "path": "^0.11.14",
     "serve-favicon": "^2.3.0"
   }
