--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
-    "path": "^0.11.14",
-    "serve-favicon": "^2.5.0"
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "1.13.2"
   }
 }
