--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap3": "^3.3.5",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "dotenv": "^1.2.0",
