--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "bootstrap3": "^3.3.5",
+    "bootstrap3": "^3.3.7",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "dotenv": "^1.2.0",
@@ -24,7 +24,6 @@
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
-    "serve-static": "1.13.2",
-    "font-awesome": "^4.4.0"
+    "serve-static": "1.13.2"
   }
 }
