--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^3.4.1",
     "bootstrap3": "^3.3.7",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
