--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "bootstrap": "^3.4.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
-    "dotenv": "^1.2.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
     "serve-static": "1.13.2"
+  },
+  "devDependencies": {
+    "dotenv": "^1.2.0"
   }
 }
