--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": "11.9.0",
-    "npm": "6.5.0"
+    "npm": "6.8.0"
   },
   "author": "Hillary Skye",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
