--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/hillaryskye/hillary-skye.git"
+  },
   "name": "hillary-skye",
   "version": "2.0.0",
   "description": "Portfolio app for Hillary Skye showing Angular projects and web designs and wireframing examples",
@@ -14,15 +18,18 @@
   "author": "Hillary Skye",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
+    "popper.js": "^1.14.7",
     "serve-favicon": "^2.5.0",
     "serve-static": "1.13.2"
   },
